removed horizontal scrollbars, also fixed this in issue_5_searchBar when cleaning up the CSS a bit

--- a/iFixit/edits/app.css
+++ b/iFixit/edits/app.css
@@ -44,7 +44,6 @@ li img{
 
 li {
   padding: 10px;
-  overflow: auto;
 }
 
 .nav ul{
